# programming-language

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml  rust-clippy.yaml
Loba/: Loba.sln
Loba/Loba/: Loba.fs  Program.fs
crates/amarok-cli/: Cargo.toml
crates/amarok-cli/src/: commands.rs  errors.rs  main.rs
crates/amarok-lexer/: Cargo.toml
crates/amarok-lexer/src/: lexer.rs  token.rs
crates/amarok-lexer/tests/: lexer_tests.rs
crates/amarok-parser/: Cargo.toml
crates/amarok-parser/src/: lib.rs  (+3 more)
crates/amarok_cli/: Cargo.toml
crates/amarok_interpreter/: Cargo.toml
crates/amarok_parser/: Cargo.toml
crates/amarok_syntax/: Cargo.toml
crates/cli/: Cargo.toml
crates/codegen/: Cargo.toml
crates/driver/: Cargo.toml
crates/syntax/: Cargo.toml
examples/: broken.amarok  hello.amarok  one.wolf  syntax_error.amarok
foxtrot/src/: chunk.c  chunk.h  common.h
languages/Loba/: Loba.sln.DotSettings
languages/foxtrot/: README.md
languages/lox/clox/: CMakeLists.txt
languages/lox/clox/src/: chunk.c  chunk.h  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
languages/lox/plox/: pyproject.toml
languages/lox/plox/plox/: __main__.py
languages/lox/plox/src/plox/: __main__.py  main.py  scanner.py  token.py  token_types.py
languages/mago/: Cargo.toml
mago/: README.md
mago/examples/: example.nrs
mago/src/: main.rs
sierra/: README.md
src/: chunk.h  debug.c  main.c  memory.h  scanner.c  vm.c
(+50 files in other folders)
