[project]
name = "plox"
version = "0.1.0"
description = "Crafting Interpeters tutorial language"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [

]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"

[tool.pylint.format]
max-line-length = 120
